# PyPcl

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  publish-pypi.yml  publish-wheels.yml  publish.yml
data/: 0000.pcd
pointclouds/: CMakeLists.txt  __init__.py  pcd_reader.h
pypcl/: CMakeLists.txt  __init__.py  _pypcl.pyx  pcd_reader.cpp  pcd_reader.pxd
tests/: test_pcd.py  test_savenpz.py
