[tool.poetry]
name = "pypcl"
version = "0.1.0"
description = "Point Cloud Library for Python"
authors = ["emanuere <smtn10hryk28@gmail.com>"]
license = "Apatch License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.9"
ninja = "^1.11.1.1"
cmake = "^3.29.0.1"
scikit-build = "^0.17.6"
setuptools = "^69.2.0"
tqdm = "^4.66.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
licensecheck = "^2024.2"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "cython",
]
build-backend = "setuptools.build_meta"
